귓속말 설정 기능 추가 + 일부 오류 수정